--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,9 @@ li {
   padding: 10px 0;
   text-align: left;
 }
-
+a {
+  text-decoration: none;
+}
 img {
   width: 100%;
 }
@@ -415,6 +417,63 @@ small {
    background: #0e0f61;
    z-index: -1;
  }
+
+/********************/
+.work_image-container {
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+  margin-top: -4px;
+  margin-left: -4px;
+
+}
+.work_link {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+}
+
+.work_link:hover  figcaption {
+  background: transparent;
+  color: transparent;
+}
+
+figcaption {
+  background: rgba(14, 15, 97, .8);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  text-align: center;
+  top: 0;
+  padding: 15px;
+  color: rgba(255, 255, 255, .7);
+
+}
+.figcaption {
+  transition: all 1s;
+}
+.figcaption:before {
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 20%;
+  left: 20%;
+  top: 30%;
+  background: rgba(255, 255, 255, .1);
+  transform: translate(13%,190%) rotate(-30deg);
+  transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
+  transition-delay: .3s;
+
+}
+.figcaption:hover:before {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translate(0,0);
+}
+
 /****************************************************/
 
 @media all and (max-width: 600px) {
