--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,7 @@ textarea {
   margin-bottom: 20px;
 }
 textarea {
+  width: 95%;
   padding: 8px 0;
   resize: none;
 }
@@ -94,6 +95,92 @@ textarea {
 .mt-15 {
   margin-top: 15px;
 }
+/**************************************************************** BUTTONS AND LINKS****************************************************************/
+a {
+  text-decoration: none;
+  font-size: 14px;
+  transition: .2s;
+}
+
+.sim-button{
+  line-height: 50px;
+  height: 50px;
+  text-align: center;
+  margin-top: 25px;
+  width: 50%;
+  cursor: pointer;
+}
+.btn {
+  background: linear-gradient( 45deg, #d21551, #831657, #0e0f61);;
+  color: rgba(255,255,255,1);
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid rgba(255,255,255,0.5);
+  overflow: hidden;
+}
+
+.btn a{
+  color: rgba(51,51,51,1);
+  text-decoration: none;
+  display: block;
+}
+.btn::before{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-color: rgba(210,21,81,.25);
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+  -webkit-transform: translate(13%,190%) rotate(-30deg);
+  transform: translate(13%,190%) rotate(-30deg);
+  -webkit-transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
+  transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
+}
+.btn::after{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-color:rgba(55,150,198,.25);
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+  -webkit-transform: translate(-13%,-190%) rotate(-30deg);
+  transform: translate(-13%,-190%) rotate(-30deg);
+  -webkit-transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
+  transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
+}
+.btn::before{
+  -webkit-transition-delay: 0.2s;
+  transition-delay: 0.2s;
+}
+.btn:hover::before,
+.btn:hover::after {
+  -webkit-transform: translate(0, 0);
+  transform: translate(0, 0);
+  font-size: 14px;
+  outline: none;
+  color: #ffffff;
+  padding: 8px 25px;
+  border-radius: 2px;
+  text-transform: uppercase;
+}
+
 
 /******* Menu ********/
 .menu {
@@ -179,6 +266,11 @@ section:first-of-type {
 .col-2 {
   width: 50%;
   flex: 0 0 50%;
+  padding: 0 15px;
+}
+.col {
+  width: 100%;
+  flex: 0 0 100%;
   padding: 0 15px;
 }
 .padding-0 {
