--- a/css/styles.css
+++ b/css/styles.css
@@ -408,7 +408,7 @@ small {
 }
 .box h1 {
   position: absolute;
-  top: 23%;
+  top: 7%;
   left: -25%;
   animation: bounceInLeft 2s ease-out;
 }
@@ -593,7 +593,105 @@ figcaption {
       #A76BFD 7px
   );
 }
-/****************************************************/
+/*********************** MEDIA *****************************/
+
+
+@media all and (max-width: 1200px) {
+  .container {
+    width: 95%;
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+  .violet-block {
+    width: 100%;
+    margin: auto;
+  }
+}
+
+
+@media all and (max-width: 1025px) {
+  .col-3 {
+    width: 30px;
+    flex: 0 0 30%;
+  }
+}
+
+
+@media all and (max-width: 991px) {
+  h1 {
+    font-size: 3.8em;
+  }
+  h2 {
+    font-size: 48px;
+  }
+  h2.h-header {
+     font-size: 46px;
+   }
+  h3 {
+    font-size: 28px;
+  }
+  h3.group-name {
+     font-size: 30px;
+     margin-bottom: 20px;
+   }
+
+  h4 {
+    font-size: 22px;
+  }
+  .row {
+    justify-content: space-around;
+  }
+  .col-3 {
+    width: 45%;
+    flex: 0 0 45%;
+  }
+}
+
+@media all and (max-width: 767px) {
+
+   h1 {
+     font-size: 3.3em;
+   }
+  h2 {
+    font-size: 42px;
+  }
+  h2.h-header {
+     font-size: 38px;
+   }
+
+  h3 {
+    font-size: 25px;
+  }
+  h3.group-name {
+     font-size: 26px;
+     margin-bottom: 15px;
+   }
+
+  h4 {
+    font-size: 20px;
+  }
+  h5 {
+    font-size: 18px;
+  }
+  h5.form-title {
+     padding-top: 10px;
+   }
+
+  p {
+    font-size: 14px;
+  }
+  .col-2 {
+    width: 100%;
+    flex: 0 0 100%;
+  }
+  .box {
+    width: 88%;
+  }
+  .box h1 {
+    top: 5%;
+    left: -9%;
+  }
+}
 
 @media all and (max-width: 600px) {
   .menu {
@@ -607,5 +705,34 @@ figcaption {
   nav .brand {
     flex: 0 0 100%;
     text-align: center;
+  }
+}
+
+
+@media all and (max-width: 550px) {
+
+  h1 {
+    font-size: 3em;
+  }
+
+  .col-3 {
+    width: 320px;
+    flex: 0 0 320px;
+  }
+
+  input[type=email], input[type=text], textarea {
+    width: 100%;
+  }
+  .violet-block {
+    padding-left: 0;
+  }
+
+}
+@media all and (max-width: 480px) {
+  h1 {
+    font-size: 2.8em;
+  }
+  .container {
+    overflow: hidden;
   }
 }
