--- a/css/styles.css
+++ b/css/styles.css
@@ -117,6 +117,7 @@ a {
   margin-top: 25px;
   width: 50%;
   cursor: pointer;
+  display: block;
 }
 .btn {
   background: linear-gradient( 45deg, #d21551, #831657, #0e0f61);;
@@ -131,8 +132,17 @@ a {
   border: 1px solid rgba(255,255,255,0.5);
   overflow: hidden;
 }
+.btn i {
+  font-size: 25px;
+  vertical-align: middle;
+}
+.btn img {
+  height: 25px;
+  width: auto;
+  vertical-align: middle;
+}
 
-.btn a{
+.btn a {
   color: rgba(51,51,51,1);
   text-decoration: none;
   display: block;
